--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="header">
             <h1>Sot eshte ditelindja e Dorines. 🎉</h1>
-            <img id="bff-img" src="images/IMG-20230630-WA0013.jpg">
+            <img id="bff-img" src="IMG-20230630-WA0013.jpg">
             <h2 id="bday-age">28 Vjece</h2>
             <h4 id="bday-date">14.07.2023</h4>
         </div>
